config-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: stc
  creationTimestamp: null
  labels:
    app: config-service
  name: config-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-service
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        backend-studenttaskchecker: "true"
        app: config-service
    spec:
      containers:
        - image: config-service:latest
          name: config-service
          ports:
            - containerPort: 8888
          resources: {}
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
status: {}
