filemanagement-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: stc
  creationTimestamp: null
  labels:
    app: filemanagement-service
  name: filemanagement-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: filemanagement-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      annotations:
      creationTimestamp: null
      labels:
        backend-studenttaskchecker: "true"
        app: filemanagement-service
    spec:
      containers:
        - image: filemanagement-service:latest
          name: filemanagement-service
          ports:
            - containerPort: 8080
          resources: {}
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
status: {}
