frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: stc
  name: frontend
  labels:
    app: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
   metadata:
      labels:
       io.kompose.network/backend2233main-studenttaskchecker: "true"
       app: frontend
   spec:
      containers:
        - image: frontend:latest
          name: frontend
          command: ["/bin/sh", "-c"]
          args:
            - echo starting;
               npm install;
               npm run serve;
          ports:
            - containerPort: 3000
          resources: {}
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
status: {}
