mailhog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: stc
  creationTimestamp: null
  labels:
    app: mailhog
  name: mailhog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailhog
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        backend-studenttaskchecker: "true"
        app: mailhog
    spec:
      containers:
        - image: mailhog/mailhog:latest
          name: mailhog
          ports:
            - containerPort: 1025
            - containerPort: 8025
          resources: {}
      restartPolicy: Always
status: {}
