user-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: stc
  creationTimestamp: null
  labels:
    app: user-service
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        backend-studenttaskchecker: "true"
        app: user-service
    spec:
      containers:
        - image: user-service:latest
          name: user-service
          ports:
            - containerPort: 8080
          resources: {}
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
status: {}
