config-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: stc
  creationTimestamp: null
  labels:
    app: config-service
  name: config-service
spec:
  ports:
    - name: "8888"
      port: 8888
      targetPort: 8888
  selector:
    app: config-service
status:
  loadBalancer: {}
