discovery-service-peer1-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: stc
  creationTimestamp: null
  labels:
    app: discovery-service-peer1
  name: discovery-service-peer1
spec:
  ports:
    - name: "8761"
      port: 8761
      targetPort: 8761
  selector:
    app: discovery-service-peer1
status:
  loadBalancer: {}
