discovery-service-peer2-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: stc
  creationTimestamp: null
  labels:
    app: discovery-service-peer2
  name: discovery-service-peer2
spec:
  ports:
    - name: "8761"
      port: 8761
      targetPort: 8761
  selector:
    app: discovery-service-peer2
status:
  loadBalancer: {}
