frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: stc
  name: frontend
  labels:
    app: frontend
spec:
  type: ClusterIP
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: frontend
