gateway-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: stc
  creationTimestamp: null
  labels:
    app: gateway-service
  name: gateway-service
spec:
  ports:
    - name: "8060"
      port: 8060
      protocol: TCP
      targetPort: 8060
  selector:
    app: gateway-service
status:
  loadBalancer: {}
