mailhog-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: stc
  creationTimestamp: null
  labels:
    app: mailhog
  name: mailhog
spec:
  ports:
    - name: "1025"
      port: 1025
      targetPort: 1025
    - name: "8025"
      port: 8025
      targetPort: 8025
  selector:
    app: mailhog
status:
  loadBalancer: {}
