mysql-database-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: stc
  creationTimestamp: null
  labels:
    app: mysql-database
  name: mysql-database
spec:
  ports:
    - name: mysql-database
      port: 3306
      targetPort: 3306
  selector:
    app: mysql-database
status:
  loadBalancer: {}
