task-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: stc
  creationTimestamp: null
  labels:
    app: task-service
  name: task-service
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    app: task-service
status:
  loadBalancer: {}
